// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPassword renders form with email and password fields 1`] = `
<div
  className="container"
>
  <div
    className="row justify-content-center"
  >
    <div
      className="col-xs-12 col-sm-8 col-md-6"
    >
      <form
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label
            htmlFor="password"
          >
            <span
              className={undefined}
              style={undefined}
            >
              Password
            </span>
          </label>
          <input
            className="form-control"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="password_confirmation"
          >
            <span
              className={undefined}
              style={undefined}
            >
              Password Confirmation
            </span>
          </label>
          <input
            className="form-control"
            name="password_confirmation"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <button
            className="btn btn-outline-success btn-lg btn-block"
            onClick={[Function]}
          >
            <span
              className={undefined}
              style={undefined}
            >
              Save
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ResetPassword renders form with error message 1`] = `
<div
  className="container"
>
  <div
    className="row justify-content-center"
  >
    <div
      className="col-xs-12 col-sm-8 col-md-6"
    >
      <form
        noValidate={true}
        onSubmit={[Function]}
      >
        <div
          className="form-group"
        >
          <label
            htmlFor="password"
          >
            <span
              className={undefined}
              style={undefined}
            >
              Password
            </span>
          </label>
          <input
            className="form-control"
            name="password"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
        </div>
        <div
          className="form-group"
        >
          <label
            htmlFor="password_confirmation"
          >
            <span
              className={undefined}
              style={undefined}
            >
              Password Confirmation
            </span>
          </label>
          <input
            className="form-control"
            name="password_confirmation"
            onBlur={[Function]}
            onChange={[Function]}
            type="password"
            value=""
          />
          <span
            className="error-message"
          >
            Passwords are not same.
          </span>
        </div>
        <div
          className="form-group"
        >
          <button
            className="btn btn-outline-success btn-lg btn-block"
            onClick={[Function]}
          >
            <span
              className={undefined}
              style={undefined}
            >
              Save
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
